--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -26,14 +26,14 @@
         </aside>
       {% endif %}
       {% if tags %}
-        <footer class="[ post__footer ] [ pad-top-600 pad-bottom-600 ]">
+        <footer class="[ post__footer ] [ pad-top-600 pad-bottom-700 ]">
           <div class="inner-wrapper">
             <div class="[ nav ] [ box-flex align-center ]">
-              <h2 class="font-base text-500">Filed under</h2>
+              <h2 class="font-base text-500">Find similar posts under:</h2>
               <ul class="[ nav__list nav__list--tags ] [ box-flex align-center pad-left-400 ] [ p-category ]">
                 {% for item in tags %}
                   <li class="nav__item nav__item--tag">
-                    <a href="/tags/{{ item }}" class="text-400">{{ item }}</a>
+                    <a href="/tags/{{ item }}" class="text-400">#{{ item }}</a>
                   </li>
                 {% endfor %}
               </ul>
