--- a/src/_includes/layouts/project-single.njk
+++ b/src/_includes/layouts/project-single.njk
@@ -4,8 +4,6 @@
 {# Intro content #}
 {% set introHeading = title %}
 {% set introSummary %}
-{% set introImage = bannerImage %}
-{% set introImageClass = 'angled' %}
 
 <p class="[ intro__meta ] [ pad-bottom-500 ] [ text-500 weight-300 leading-tight ]">
   <a href="{{ url }}">{{ url }}</a>
@@ -29,11 +27,11 @@
         <footer class="[ post__footer ] [ pad-top-500 pad-bottom-500 ]">
           <div class="inner-wrapper">
             <div class="[ nav ] [ box-flex align-center ]">
-              <h2 class="font-base text-500">Filed under</h2>
+              <h2 class="font-base text-500">Find similar projects under:</h2>
               <ul class="[ nav__list nav__list--tags ] [ box-flex align-center pad-left-400 ] [ p-category ]">
                 {% for item in tags %}
                   <li class="nav__item nav__item--tag">
-                    <a href="/tags/{{ item }}" class="text-400">{{ item }}</a>
+                    <a href="/tags/{{ item }}" class="text-400">#{{ item }}</a>
                   </li>
                 {% endfor %}
               </ul>
