--- a/src/_includes/partials/components/project-list.njk
+++ b/src/_includes/partials/components/project-list.njk
@@ -1,5 +1,5 @@
 {% if projectListItems.length %}
-  <section class="[ project-list ] [ pad-top-700 pad-bottom-max md:pad-top-600 ]">
+  <section class="[ project-list ] [ pad-bottom-max ]">
     <div class="[ wrapper ] [ sf-flow ]">
       {% if page.url == '/' %}
         <h2 class="[ post-list__heading ] [ text-700 md:text-900 ]">Projects</h2>
