--- a/src/scss/_theme.scss
+++ b/src/scss/_theme.scss
@@ -2,7 +2,7 @@
 
 	// Set theme aliases
 	--color-mode: 'light';
-	--color-bg: #{get-color('grey-light')};
+	--color-bg: #{get-color('light')};
 	--color-text: #{get-color('dark')};
 	--color-link-text: #{get-color('primary')};
 	--color-selection-text: #{get-color('light')};
@@ -26,7 +26,7 @@
 }
 
 @include dark-mode() {
-	--color-bg: #{get-color('dark')};
+	--color-bg: #1f1a24;
 	--color-bg-glare: #{get-color('dark')};
 	--color-text: #{get-color('light')};
 	--color-link-text: #{get-color('accent-alt')};
