--- a/src/_includes/layouts/journal.njk
+++ b/src/_includes/layouts/journal.njk
@@ -3,7 +3,7 @@
 
 {# Intro content #}
 {% set introHeading = title %}
-{% set introSummary %}{{ content | safe }}{% endset %}
+{% set introSummary = "All journal entries." %}
 
 {# Post list content #}
 {% set journalListItems = collections.journal %}
