--- a/src/_includes/layouts/projects.njk
+++ b/src/_includes/layouts/projects.njk
@@ -3,6 +3,7 @@
 
 {# Intro content #}
 {% set introHeading = title %}
+{% set introSummary = "The side projects that made the cut." %}
 
 {# Project list content #}
 {% set projectListItems = collections.projects %}
