--- a/src/_includes/partials/global/meta-info.njk
+++ b/src/_includes/partials/global/meta-info.njk
@@ -1,4 +1,4 @@
-{% set pageTitle = site.name + ' | ' + title %}
+{% set pageTitle = site.name + ' / ' + title %}
 {% set pageDesc = '' %}
 {% set siteTitle = site.name %}
 {% set currentUrl = site.url + page.url %}
@@ -28,7 +28,7 @@
   <meta property="og:description" content="{{ metaDesc }}" />
 {% endif %}
 
-{% if socialImage %}  
+{% if socialImage %}
   <meta property="og:image" content="{{ site.url }}{{ socialImage }}" />
   <meta name="twitter:image" content="{{ site.url }}{{ socialImage }}" />
   <meta property="og:image:alt" content="Page image for {{ site.name }}" />
