--- a/src/_includes/partials/components/article-list.njk
+++ b/src/_includes/partials/components/article-list.njk
@@ -1,20 +1,24 @@
 {% if postListItems.length %}
-  <section class="[ post-list ] [ pad-top-700 pad-bottom-700 md:pad-bottom-max ]">
-    <div class="[ wrapper ] [ sf-flow ]">
-      <h2 class="[ post-list__heading ] [ text-700 md:text-900 ]">{{ postListHeading }}</h2>
-	    <p class="section-intro">{{ postListSummary }}</p>
-      <ol class="[ post-list__items ] [ sf-flow ] [ pad-top-500 ]" reversed>
-        {% for item in postListItems %}
-          <li class="post-list__item">
-            <h3 class="font-base leading-tight text-600">
-              <a href="{{ item.url }}" class="post-list__link link-hover" rel="bookmark">{{ item.data.title }}</a>
-            </h3>
-            <p class="gap-top-300">
-              <time datetime="{{ item.date | w3DateFilter }}">{{ item.date | dateFilter }}</time>
-            </p>
-          </li>
-        {% endfor %}
-      </ol>
+<section class="[ post-list ] [ pad-top-700 pad-bottom-700 md:pad-bottom-max ]">
+	<div class="[ wrapper ] [ sf-flow ]">
+		<h2 class="[ post-list__heading ] [ text-700 md:text-900 ]">{{ postListHeading }}</h2>
+		<p class="section-intro">{{ postListSummary }}</p>
+		<ol class="[ post-list__items ] [ sf-flow ] [ pad-top-500 ]" reversed>
+			{% for item in postListItems %}
+				<li class="post-list__item">
+					<h3 class="font-base leading-tight text-600 md:text-700">
+						<a href="{{ item.url }}" class="post-list__link link-hover" rel="bookmark">{{ item.data.title }}</a>
+					</h3>
+					<p class="gap-top-300">
+						<time datetime="{{ item.date | w3DateFilter }}">{{ item.date | dateFilter }}</time>
+					</p>
+				</li>
+			{% endfor %}
+		</ol>
+
+		{% if page.url == '/' %}
+		<a href="/articles" class="[ post-list__archive ] [ text-500 ]">See all articles</a>
+		{% endif %}
     </div>
-  </section>
+</section>
 {% endif %}
