--- a/src/_includes/partials/components/intro.njk
+++ b/src/_includes/partials/components/intro.njk
@@ -3,7 +3,7 @@
     <div class="[ sf-flow ]">
       <h1 class="[ intro__heading ] [ text-900 md:text-max leading-tight ] [ p-name ]">{{ introHeading }}</h1>
       {% if introSummary %}
-        <div class="[ intro__summary ] [ sf-flow ] [ text-600 md:text-700 leading-tight ]">{{ introSummary | safe }}</div>
+        <div class="[ intro__summary ] [ sf-flow ] [ text-600 leading-tight ]">{{ introSummary | safe }}</div>
       {% endif %}
 
       <!-- Contact details on the resume page, not really needed anywhere else -->
