feat: slight redesign (#326)
* style: link color updates

Some to meet AA!

* fix: footer credit links in light mode

* fix: nav item active state

* fix: vertical overflow on main nav

* style: couple of post footer tag nav tweaks

* fix: mobile main navigation overflow scrolling

* fix: syntax error in an article

* chore(deps): bump rollup version

* style: post note spacing following a code block

* fix: wrap inline code examples

Fixes #302 doesn't look ideal, but better that cut off examples

* chore: running some linting

* chore: stylelint run

* chore: npm audit fix security update

* feat: a little bit of a visual refresh (minor)

Still some WIP bits/haven't decided what to do with projects

* Update Pages “home”

* Update Pages “home”

* feat: some more design tweaks

* chore: external link security

* chore: set admin to main branch

--- a/src/_includes/partials/components/intro.njk
+++ b/src/_includes/partials/components/intro.njk
@@ -1,9 +1,9 @@
-<header class="[ intro {% if introImage %} intro__flex {% endif %} ] [ pad-top-max pad-bottom-max ]">
+<header class="[ intro {% if introImage %} intro__flex {% endif %} ] [ pad-top-max pad-bottom-600 ]">
   <div class="[ wrapper ] [ {% if introImage %} sf-flow {% endif %}  ]">
     <div class="[ sf-flow ]">
-      <h1 class="[ intro__heading ] [ text-800 md:text-max leading-tight ] [ p-name ]">{{ introHeading }}</h1>
+      <h1 class="[ intro__heading ] [ text-900 md:text-max leading-tight ] [ p-name ]">{{ introHeading }}</h1>
       {% if introSummary %}
-        <div class="[ intro__summary ] [ sf-flow ] [ leading-tight ]">{{ introSummary | safe }}</div>
+        <div class="[ intro__summary ] [ sf-flow ] [ text-600 leading-tight ]">{{ introSummary | safe }}</div>
       {% endif %}
 
       <!-- Contact details on the resume page, not really needed anywhere else -->
