--- a/src/scss/_print.scss
+++ b/src/scss/_print.scss
@@ -1,11 +1,4 @@
 @media print {
-	html {
-		&:before,
-		&:after {
-			display: none;
-		}
-	}
-
 	a,
 	a:not([class]) {
 		text-decoration: none;
@@ -30,6 +23,10 @@
 	}
 
 	.post-note--resume {
+		display: none;
+	}
+
+	.post__body--resume h3 img {
 		display: none;
 	}
 }
