--- a/src/scss/components/_post.scss
+++ b/src/scss/components/_post.scss
@@ -60,7 +60,7 @@
 			margin-left: get-size(800);
 
 			::marker {
-				color: var(--color-theme-primary);
+				color: var(--color-link-text);
 				font-size: get-size(300);
 			}
 		}
@@ -202,7 +202,7 @@
 			}
 
 			h2 {
-				border-bottom: 1px solid var(--color-grey-med);
+				border-bottom: 1px dotted var(--color-link-text);
 				margin-bottom: 40px;
 				padding-bottom: 20px;
 			}
