chore: some linting/perf test tweaks

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -42,7 +42,7 @@
 	{% block foot %}
 	{% endblock %}
 
-	<script type="module" src="/js/components/light-dark-toggle.js" async="" defer="defer"></script>
+	<script type="module" src="/js/components/light-dark-toggle.js" async></script>
 
 	<script>
 		if ('serviceWorker' in navigator) {
