--- a/src/_includes/partials/global/site-foot.njk
+++ b/src/_includes/partials/global/site-foot.njk
@@ -1,4 +1,4 @@
-<footer role="contentinfo" class="[ site-foot ] [ pad-top-700 pad-bottom-700 ]">
+<footer class="[ site-foot ] [ pad-top-700 pad-bottom-700 ]">
   <div class="wrapper">
     <div class="site-foot__inner">
         <article class="site-foot__details">
