--- a/src/styleguide.njk
+++ b/src/styleguide.njk
@@ -70,15 +70,9 @@ permalink: /styleguide/
 		  {% endfor %}
 		</ul>
 		<h2>Fonts</h2>
-		<h3>Base — Skolar Sans</h3>
+		<h3>Ministry</h3>
 		<p class="sf-flow">
-		  <span aria-hidden="true" role="presentation" class="font-base text-600 md:text-800 box-block leading-tight">The quick brown fox jumps over the lazy fox</span>
-		  <code>.font-base</code>
-		</p>
-		<h3>Serif — Sutro</h3>
-		<p class="sf-flow">
-		  <span aria-hidden="true" role="presentation" class="font-serif text-600 md:text-800 box-block leading-tight">The quick brown fox jumps over the lazy fox</span>
-		  <code>.font-serif</code>
+		  <span aria-hidden="true" role="presentation" class="text-600 md:text-800 box-block leading-tight">The quick brown fox jumps over the lazy fox</span>
 		</p>
 		<h2>Text sizes</h2>
 		<p>Text sizes are available as standard classes or media query prefixed, such as <code>lg:text-500</code>.</p>
