--- a/src/scss/components/_heading-permalink.scss
+++ b/src/scss/components/_heading-permalink.scss
@@ -3,7 +3,10 @@
 	font-size: .8em;
 	margin-left: .3em;
 	margin-top: .2em;
-	@include media-query('md') {
+}
+
+@include media-query('md') {
+	.heading-permalink {
 		font-size: .6em;
 		margin-top: .4em;
 	}
