--- a/src/scss/components/_post.scss
+++ b/src/scss/components/_post.scss
@@ -40,10 +40,10 @@
 		}
 
 		blockquote {
-			background-color: var(--color-light);
-			border: 1px dashed #ccc;
-			border-left: .4rem solid var(--color-theme-primary);
-			color: var(--color-dark);
+			background-color: var(--color-intro-bg);
+			border-left: .4rem solid var(--color-link-text);
+			border-radius: 10px;
+			color: var(--color-text);
 			font-size: get-size(600);
 			margin-left: 0;
 			padding-left: get-size(500);
