--- a/src/_includes/partials/components/intro.njk
+++ b/src/_includes/partials/components/intro.njk
@@ -1,7 +1,7 @@
 <header class="[ intro {% if introImage %} intro__flex {% endif %} ] [ pad-top-max pad-bottom-600 ]">
   <div class="[ wrapper ] [ {% if introImage %} sf-flow {% endif %}  ]">
     <div class="[ sf-flow ]">
-      <h1 class="[ intro__heading ] [ text-900 md:text-max leading-tight ] [ p-name ]">{{ introHeading }}</h1>
+      <h1 class="[ intro__heading ] [ text-900 md:text-max ] [ p-name ]">{{ introHeading }}</h1>
       {% if introSummary %}
         <div class="[ intro__summary ] [ sf-flow ] [ text-600 leading-tight ]">{{ introSummary | safe }}</div>
       {% endif %}
