--- a/src/_includes/partials/global/site-head.njk
+++ b/src/_includes/partials/global/site-head.njk
@@ -1,5 +1,6 @@
 <a class="skip-link" href="#main-content">Skip to content</a>
 <header class="[ site-head ] [ pad-bottom-100 ]">
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="var(--color-intro-bg)" fill-opacity=".5" d="M0,160L60,138.7C120,117,240,75,360,69.3C480,64,600,96,720,138.7C840,181,960,235,1080,224C1200,213,1320,139,1380,101.3L1440,64L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z"></path></svg>
 	<div class="wrapper">
 		<span class="visually-hidden">{{ site.name }}: {{ pageType }}</span>
 		<div class="[ site-head__inner ]">
