--- a/src/scss/components/_intro.scss
+++ b/src/scss/components/_intro.scss
@@ -1,6 +1,7 @@
 .intro {
 	color: var(--color-text);
 	margin-bottom: 1.5rem;
+	position: relative;
 	transition: background-color 300ms ease-in-out 0s, color 300ms ease-in-out 0s;
 
 	&__heading {
