style: curve tweaks

--- a/src/_includes/partials/global/site-head.njk
+++ b/src/_includes/partials/global/site-head.njk
@@ -1,6 +1,6 @@
 <a class="skip-link" href="#main-content">Skip to content</a>
 <header class="[ site-head ] [ pad-bottom-100 ]">
-  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="var(--color-intro-bg)" fill-opacity=".5" d="M0,160L60,138.7C120,117,240,75,360,69.3C480,64,600,96,720,138.7C840,181,960,235,1080,224C1200,213,1320,139,1380,101.3L1440,64L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z"></path></svg>
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="var(--color-intro-bg)" fill-opacity=".5" d="M0,96L48,96C96,96,192,96,288,112C384,128,480,160,576,165.3C672,171,768,149,864,154.7C960,160,1056,192,1152,202.7C1248,213,1344,203,1392,197.3L1440,192L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path></svg>
 	<div class="wrapper">
 		<span class="visually-hidden">{{ site.name }}: {{ pageType }}</span>
 		<div class="[ site-head__inner ]">
