--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -92,6 +92,7 @@ a:not([class]) {
 @import 'utilities/wrapper';
 
 // Components
+@import 'components/activity-list';
 @import 'components/heading-permalink';
 @import 'components/intro';
 @import 'components/light-dark-toggle';
