chore: final strava bits and some minor tweaks

--- a/src/_includes/partials/components/project-list.njk
+++ b/src/_includes/partials/components/project-list.njk
@@ -5,7 +5,7 @@
         <h2 class="[ post-list__heading ] [ text-700 md:text-900 ]">Featured Projects</h2>
         <p class="section-intro">I also build on <a href="https://codepen.io/jim-bateson">Codepen</a> and any source code is available on <a href="https://github.com/jimbateson">Github</a>.</p>
       {% endif %}
-      <ol class="[ post-list__items project-list__items ] [ pad-top-500 ]" reversed>
+      <ol class="[ post-list__items project-list__items ] [ pad-top-500 ]">
         {% for item in projectListItems %}
         <li class="[ post-list__item project-list__item ] [ sf-flow ]">
 			<div>
