--- a/src/_includes/partials/global/site-head.njk
+++ b/src/_includes/partials/global/site-head.njk
@@ -1,13 +1,13 @@
 <a class="skip-link" href="#main-content">Skip to content</a>
 <header class="[ site-head ] [ pad-bottom-100 ]">
-	<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="var(--color-intro-bg)" d="M0,96L48,96C96,96,192,96,288,112C384,128,480,160,576,165.3C672,171,768,149,864,154.7C960,160,1056,192,1152,202.7C1248,213,1344,203,1392,197.3L1440,192L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path></svg>
+	<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" aria-hidden="true" role="presentation"><path fill="var(--color-intro-bg)" d="M0,192L60,170.7C120,149,240,107,360,128C480,149,600,235,720,240C840,245,960,171,1080,138.7C1200,107,1320,117,1380,122.7L1440,128L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z"></path></svg>
 
 	<div class="wrapper">
 		<span class="visually-hidden">{{ site.name }}: {{ pageType }}</span>
 		<div class="[ site-head__inner ]">
 			<a href="/" class="[ site-head__site-name ] [ leading-tight ]"{{ 'aria-current=page' if page.url == '/' | safe }}>
 				<span class="visually-hidden">{{ 'Back to homepage' if page.url != '/' else 'Homepage' }}</span>
-				<svg class="site-logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 44.3 68.2"><path d="M1.6 54.9c-1.1-.8-1.6-2-1.6-3.6 0-3.2 2.7-5.7 8.2-7.4l5.4-25.2h7.2l-4.9 23.2c1.6-.5 2.9-1.3 3.8-2.4 1-1.1 1.8-2.6 2.5-4.8h2.1c-.9 3-2.1 5.1-3.6 6.5-1.5 1.4-3.3 2.3-5.2 2.8l-.8 3.6c-.7 3.2-1.8 5.5-3.5 6.7s-3.5 1.8-5.5 1.8c-1.7.1-3-.3-4.1-1.2zm4.5-3.8c.5-.8 1-1.9 1.2-3.3l.3-1.4c-3.3 1.2-4.9 2.6-4.9 4.2 0 .4.1.8.5 1.1.3.3.7.5 1.2.5.6.1 1.2-.3 1.7-1.1zm9.1-36.3c-.8-.8-1.1-1.7-1.1-2.8 0-1.1.4-2 1.1-2.8C16 8.4 16.9 8 18 8c1.1 0 2 .4 2.8 1.2.9.8 1.2 1.7 1.2 2.8 0 1.1-.4 2-1.2 2.8-.8.8-1.7 1.1-2.8 1.1-1.1 0-2-.3-2.8-1.1z"/><path d="M23.5 42.3c-1.2-1.1-1.8-2.7-1.8-4.7 0-1 .1-1.9.4-2.9l5.4-25 7.4-1-2.4 11.2c.9-.6 1.7-.9 2.3-1.1.6-.2 1.2-.3 1.8-.3 3.9 0 5.9 2.9 5.9 8.5 0 2.3-.4 4.8-1.3 7.4-.9 2.6-2.4 4.9-4.4 6.7-2 1.9-4.7 2.8-8 2.8-2.3.1-4.1-.5-5.3-1.6zm10.9-5.1c.9-1.3 1.6-2.9 2.1-4.8s.8-3.8.8-5.5c0-1.3-.2-2.5-.7-3.4-.5-.9-1.1-1.4-2-1.4-.5 0-1.1.1-1.7.2-.6.1-1 .4-1.3.7L29 35.7c-.1.4-.2.8-.2 1.1 0 1.5.9 2.3 2.7 2.3 1.1 0 2-.6 2.9-1.9z"/></svg>
+				{% include "partials/logo.svg" %}
 			</a>
 
 			<div class="site-head__inner--right">
