--- a/src/_includes/partials/global/site-head.njk
+++ b/src/_includes/partials/global/site-head.njk
@@ -1,6 +1,6 @@
 <a class="skip-link" href="#main-content">Skip to content</a>
 <header class="[ site-head ] [ pad-bottom-100 ]">
-	<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" aria-hidden="true" role="presentation"><path fill="var(--color-intro-bg)" d="M0,192L60,170.7C120,149,240,107,360,128C480,149,600,235,720,240C840,245,960,171,1080,138.7C1200,107,1320,117,1380,122.7L1440,128L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z"></path></svg>
+	<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" aria-hidden="true" focusable="false"><path fill="var(--color-intro-bg)" d="M0,192L60,170.7C120,149,240,107,360,128C480,149,600,235,720,240C840,245,960,171,1080,138.7C1200,107,1320,117,1380,122.7L1440,128L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z"></path></svg>
 
 	<div class="wrapper">
 		<span class="visually-hidden">{{ site.name }}: {{ pageType }}</span>
