--- a/src/scss/components/_site-head.scss
+++ b/src/scss/components/_site-head.scss
@@ -47,7 +47,7 @@
 		align-items: center;
 		display: flex;
 
-		// Outputs: .site-head__inner--right
+		// .site-head__inner--right
 		&--right {
 			align-items: center;
 			display: flex;
