--- a/src/_includes/partials/components/intro.njk
+++ b/src/_includes/partials/components/intro.njk
@@ -1,34 +1,34 @@
 <header class="[ intro {% if introImage %} intro__flex {% endif %} ] [ pad-top-max pad-bottom-600 ]">
-  <div class="[ wrapper ] [ {% if introImage %} sf-flow {% endif %}  ]">
-    <div>
-      <h1 class="[ intro__heading ] [ leading-tight text-900 md:text-max ] [ p-name ] [ gap-top-900 ]">{{ introHeading }}</h1>
-      {% if introSummary %}
-        <div class="[ intro__summary ] [ sf-flow ] [ text-700 leading-tight ]">{{ introSummary | safe }}</div>
-      {% endif %}
+	<div class="[ wrapper ] [ {% if introImage %} sf-flow {% endif %}  ]">
+		<div>
+			<h1 class="[ intro__heading ] [ leading-tight text-900 md:text-max ] [ p-name ] [ gap-top-900 ]">{{ introHeading }}</h1>
 
-      <!-- Contact details on the resume page, not really needed anywhere else -->
-      {% if page.url == '/resume/' %}
-        <ul class="[ intro__contact ] [ p-contact ] [ md:box-flex md:align-center ]">
-          <li>
-            <a href="mailto:jim.bateson@outlook.com">
-              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#4b87bd" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path><polyline points="22,6 12,13 2,6"></polyline></svg>
-              jim.bateson@outlook.com
-            </a>
-          </li>
+			{% if introSummary %}
+			<div class="[ intro__summary ] [ sf-flow ] [ text-700 leading-tight ]">{{ introSummary | safe }}</div>
+			{% endif %}
 
-          <!-- For print only -->
-          <li>
-            <a href="/">
-              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#4b87bd" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"></path><path d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"></path></svg>
-              jamesbateson.co.uk
-            </a>
-          </li>
-        </ul>
-      {% endif %}
-    </div>
+			{% if page.url == '/resume/' %}
+			<ul class="[ intro__contact ] [ p-contact ] [ md:box-flex md:align-center ]">
+				<li>
+					<a href="mailto:jim.bateson@outlook.com">
+						<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#4b87bd" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true" focusable="false"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path><polyline points="22,6 12,13 2,6"></polyline></svg>
+						jim.bateson@outlook.com
+					</a>
+				</li>
 
-    {% if introImage %}
-        <img src="{{ introImage }}" class="[ intro__image intro__image--{{ introImageClass }} ]" alt="" loading="eager">
-    {% endif %}
-  </div>
+				<!-- For print only -->
+				<li>
+					<a href="/">
+						<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#4b87bd" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true" focusable="false"><path d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"></path><path d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"></path></svg>
+						jamesbateson.co.uk
+					</a>
+				</li>
+			</ul>
+			{% endif %}
+		</div>
+
+		{% if introImage %}
+		<img src="{{ introImage }}" class="[ intro__image intro__image--{{ introImageClass }} ]" alt="" width="250" height="250" loading="eager">
+		{% endif %}
+	</div>
 </header>
