--- a/src/_includes/partials/components/intro.njk
+++ b/src/_includes/partials/components/intro.njk
@@ -4,7 +4,7 @@
 			<h1 class="[ intro__heading ] [ leading-tight text-900 md:text-max ] [ p-name ] [ gap-top-900 ]">{{ introHeading }}</h1>
 
 			{% if introSummary %}
-			<div class="[ intro__summary ] [ sf-flow ] [ text-700 leading-tight ]">{{ introSummary | safe }}</div>
+			<div class="[ intro__summary ] [ sf-flow ] [ text-600 md:text-700 leading-tight ]">{{ introSummary | safe }}</div>
 			{% endif %}
 
 			{% if page.url == '/resume/' %}
